--- a/Pages/Shared/_Layout.cshtml
+++ b/Pages/Shared/_Layout.cshtml
@@ -64,6 +64,7 @@
                             </li>
                         </ul>
                     </li>
+                    <partial name="_AdminPartial"/>
                 </ul>
                 <partial name="_LoginPartial"/>
             </div>
