--- a/Pages/Shared/_AdminPartial.cshtml
+++ b/Pages/Shared/_AdminPartial.cshtml
@@ -19,13 +19,13 @@
         </a>
         <ul class="dropdown-menu " aria-labelledby="nav-link-2">
             <li>
-                <a class="dropdown-item" asp-page="./Index" aria-current="">
+                <a class="dropdown-item" href="/Admin/Products" aria-current="">
                     Products
                 </a>
             </li>
             <div class="dropdown-divider"></div>
             <li>
-                <a class="dropdown-item " asp-page="./Index" aria-current="">
+                <a class="dropdown-item" href="/Admin/Discounts" aria-current="">
                     Discounts
                 </a>
             </li>
