new stuff added

--- a/Pages/Admin/Products/Details.cshtml
+++ b/Pages/Admin/Products/Details.cshtml
@@ -1,9 +1,9 @@
-@page
+@page "/Products/ProductDetails"
 @model DotnetStore.Pages.Admin.Products.DetailsModel
 
 @{
     ViewData["Title"] = "Details";
-    Layout = "~/Pages/Admin/_Layout.cshtml";
+    Layout = "~/Pages/Shared/_Layout.cshtml";
 }
 
 <div id="shopify-section-product-template" class="shopify-section">
