--- a/Pages/Admin/Products/Index.cshtml
+++ b/Pages/Admin/Products/Index.cshtml
@@ -26,7 +26,7 @@
                 {
                     <li class="product-item col pb-5 text-center">
                         <!-- Product Image -->
-                        <a class="product-image d-block text-decoration-none" href="/Admin/Products/Details?id=@item.Id">
+                        <a class="product-image d-block text-decoration-none" href="/Products/ProductDetails?id=@item.Id">
                             <img class="product-item-img img-fluid mb-0 img-thumbnail"
                                  src="~/images/@item.ProductImage.Name"
                                  width="480" height="480" loading="lazy"
