--- a/Pages/Shared/_AdminPartial.cshtml
+++ b/Pages/Shared/_AdminPartial.cshtml
@@ -11,7 +11,7 @@
             Administration
         </a>
     </li>
-    <li class="nav-item dropdown">
+    <li class="nav-item dropdown active">
         <a id="nav-link-2" class="nav-link  dropdown-toggle" href="#" aria-current=""
            role="button"
            data-bs-toggle="dropdown" aria-expanded="false">
