--- a/Pages/Shared/_Layout.cshtml
+++ b/Pages/Shared/_Layout.cshtml
@@ -66,7 +66,9 @@
                     </li>
                     <partial name="_AdminPartial"/>
                 </ul>
-                <partial name="_LoginPartial"/>
+                <ul id="navbar-icons-nav" class="navbar-nav align-items-center">
+                    <partial name="_LoginPartial"/>
+                </ul>
             </div>
         </div>
     </nav>
