--- a/Pages/Shared/_LoginPartial.cshtml
+++ b/Pages/Shared/_LoginPartial.cshtml
@@ -47,11 +47,7 @@
             </span>
         </a>
     </li>
-    @* *@
-    @* *@
-    @* <partial name="_CartPartial"/> *@
-    @* *@
-    @* *@
+    <partial name="_CartPartial"/>
     <li id="logout-nav-item" class="nav-item d-none d-lg-block">
         <form class="form-inline" asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl="@Url.Page("/", new {area = ""})" method="post">
             <button type="submit" class="material-icons-outlined nav-link btn btn-link text-dark" style="font-size: 24px;">logout</button>
@@ -63,11 +59,11 @@
 }
 else
 {
-    @* <partial name="_CartPartial"/> *@
-    <li class="nav-item">
+    <partial name="_CartPartial"/>
+    <li id="register-nav-item" class="nav-item">
         <a class="nav-link text-dark" asp-area="Identity" asp-page="/Account/Register">Register</a>
     </li>
-    <li class="nav-item">
+    <li id="login-nav-item" class="nav-item">
         <a class="nav-link d-flex text-dark" asp-area="Identity" asp-page="/Account/Login">
             <span class="material-icons-outlined">
                 login
